tests/dataset/tpc-h/compiler/c/q3.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:16Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:16Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static char *cutoff = "1995-03-15";
static char *segment = "BUILDING";

typedef struct {
  int l_orderkey;
  double revenue;
  const char *o_orderdate;
  int o_shippriority;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_custkey;
  const char *c_mktsegment;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int o_orderkey;
  int o_custkey;
  const char *o_orderdate;
  int o_shippriority;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int l_orderkey;
  double l_extendedprice;
  double l_discount;
  const char *l_shipdate;
} lineitem_t;
typedef struct {
  int len;
  lineitem_t *data;
} lineitem_list_t;
lineitem_list_t create_lineitem_list(int len) {
  lineitem_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(lineitem_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int l_orderkey;
  double revenue;
  int o_orderdate;
  int o_shippriority;
} order_line_join_item_t;
typedef struct {
  int len;
  order_line_join_item_t *data;
} order_line_join_item_list_t;
order_line_join_item_list_t create_order_line_join_item_list(int len) {
  order_line_join_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_line_join_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int
    test_Q3_returns_revenue_per_order_with_correct_priority_order_line_join;
static void test_Q3_returns_revenue_per_order_with_correct_priority() {
  tmp1_t tmp1[] = {(tmp1_t){.l_orderkey = 100,
                            .revenue = 1000.0 * 0.95 + 500.0,
                            .o_orderdate = "1995-03-14",
                            .o_shippriority = 1}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_Q3_returns_revenue_per_order_with_correct_priority_order_line_join
          .len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0;
         i3 <
         test_Q3_returns_revenue_per_order_with_correct_priority_order_line_join
             .len;
         i3++) {
      if (test_Q3_returns_revenue_per_order_with_correct_priority_order_line_join
              .data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  customer_t customer[] = {
      (customer_t){.c_custkey = 1, .c_mktsegment = "BUILDING"},
      (customer_t){.c_custkey = 2, .c_mktsegment = "AUTOMOBILE"}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  order_t orders[] = {(order_t){.o_orderkey = 100,
                                .o_custkey = 1,
                                .o_orderdate = "1995-03-14",
                                .o_shippriority = 1},
                      (order_t){.o_orderkey = 200,
                                .o_custkey = 2,
                                .o_orderdate = "1995-03-10",
                                .o_shippriority = 2}};
  int orders_len = sizeof(orders) / sizeof(orders[0]);
  lineitem_t lineitem[] = {(lineitem_t){.l_orderkey = 100,
                                        .l_extendedprice = 1000.0,
                                        .l_discount = 0.05,
                                        .l_shipdate = "1995-03-16"},
                           (lineitem_t){.l_orderkey = 100,
                                        .l_extendedprice = 500.0,
                                        .l_discount = 0.0,
                                        .l_shipdate = "1995-03-20"},
                           (lineitem_t){.l_orderkey = 200,
                                        .l_extendedprice = 1000.0,
                                        .l_discount = 0.1,
                                        .l_shipdate = "1995-03-14"}};
  int lineitem_len = sizeof(lineitem) / sizeof(lineitem[0]);
  customer_list_t tmp4 = customer_list_t_create(customer_len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < customer_len; tmp6++) {
    customer_t c = customer[tmp6];
    if (!((strcmp(c.c_mktsegment, segment) == 0))) {
      continue;
    }
    tmp4.data[tmp5] = c;
    tmp5++;
  }
  tmp4.len = tmp5;
  customer_list_t building_customers = tmp4;
  order_list_t tmp7 = order_list_t_create(orders.len * building_customers.len);
  int tmp8 = 0;
  for (int tmp9 = 0; tmp9 < orders_len; tmp9++) {
    order_t o = orders[tmp9];
    for (int tmp10 = 0; tmp10 < building_customers.len; tmp10++) {
      customer_t c = building_customers.data[tmp10];
      if (!(o.o_custkey == c.c_custkey)) {
        continue;
      }
      if (!((strcmp(o.o_orderdate, cutoff) < 0))) {
        continue;
      }
      tmp7.data[tmp8] = o;
      tmp8++;
    }
  }
  tmp7.len = tmp8;
  order_list_t valid_orders = tmp7;
  lineitem_list_t tmp11 = lineitem_list_t_create(lineitem_len);
  int tmp12 = 0;
  for (int tmp13 = 0; tmp13 < lineitem_len; tmp13++) {
    lineitem_t l = lineitem[tmp13];
    if (!((strcmp(l.l_shipdate, cutoff) > 0))) {
      continue;
    }
    tmp11.data[tmp12] = l;
    tmp12++;
  }
  tmp11.len = tmp12;
  lineitem_list_t valid_lineitems = tmp11;
  order_line_join_item_list_t order_line_join =
      (order_line_join_item_list_t){0, NULL};
  printf("[");
  for (int i14 = 0; i14 < order_line_join.len; i14++) {
    if (i14 > 0)
      printf(",");
    order_line_join_item_t it = order_line_join.data[i14];
    printf("{");
    _json_string("l_orderkey");
    printf(":");
    _json_int(it.l_orderkey);
    printf(",");
    _json_string("revenue");
    printf(":");
    _json_float(it.revenue);
    printf(",");
    _json_string("o_orderdate");
    printf(":");
    _json_int(it.o_orderdate);
    printf(",");
    _json_string("o_shippriority");
    printf(":");
    _json_int(it.o_shippriority);
    printf("}");
  }
  printf("]");
  test_Q3_returns_revenue_per_order_with_correct_priority_order_line_join =
      order_line_join;
  test_Q3_returns_revenue_per_order_with_correct_priority();
  free(building_customers.data);
  free(valid_lineitems.data);
  return 0;
}
